client_source_files = files('main.c',
                            'client.c',
                            'mainwindow.c',
                            'connectbox.c',
                            'captchachoosebox.c',
                            'captchaadditionbox.c',
                            'captchaselectionbox.c',
                            'captcharesultbox.c')
